feat(summit): interface of summit

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 body {
   width: 100dvw;
   overflow-x: hidden;
-  background-color: #c5c5d3;
+  background-color: #000000;
   font-family: var(--font-general), sans-serif;
 }
 
