--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,15 @@ html {
     @apply flex justify-center items-center;
   }
 
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
   .hero-header {
     @apply uppercase font-anton font-black text-5xl sm:text-5xl md:text-7xl lg:text-8xl tracking-wide;
   }
